# tool

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  PROJECT.md  README.md  REFACTOR_PLAN.md  REQUIREMENTS.md  instrumentation.ts  jest.config.js  jest.setup.js  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  project-structure.txt  proxy.ts  skills-lock.json  toolreadme.md  tsconfig.json  vercel.json  vitest.config.ts
.claude/: ralph-loop.local.md  settings.local.json
agent/: agent.ts  instructions.md  instrumentation.ts
agent-core/: agent-definition.ts  eve-channel.ts  langfuse-instrumentation.ts  langfuse-session-span-processor.ts  model-catalog.ts  supabase.ts
app/: globals.css  layout.tsx  page.tsx
components/: error-boundary.tsx
lib/: ai.ts  anon-id.ts  encryption.ts  session.ts  setup.ts  utils.ts
sandbox-deploy-standalone/: README.txt  (+1 more)
sandbox-service/: .env.example  README.md  pyproject.toml
sandbox-service/config/: nsjail.conf
sandbox-service/deploy/: install.sh  requirements.txt  sandbox-service.service
sandbox-service/src/: __init__.py  config.py  main.py  models.py
sandbox-service/src/middleware/: auth.py
sandbox-service/src/routes/: __init__.py  api.py
sandbox-service/src/services/: __init__.py  sandbox.py  session.py
sandbox-service/src/utils/: __init__.py  logger.py  security.py
sandbox-service/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_config.py  test_sandbox.py  test_security.py  test_session.py
(+523 files in other folders)
